--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
 					<li class="active"><a href="index.html">Home</a></li>
-					<li class="has-children">
+					<!-- <li class="has-children active"> -->
+						<li class="">
 						<a href="projects.html">Projects</a>
 						<!-- <ul class="dropdown">
 							<li><a href="#">Commercial Building</a></li>
