changed some bg images

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 					<span></span>
 				</a>
 				<ul class="site-menu float-end d-none d-md-block">
-					<li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 1 704 796 9107</span></a></li>
+					<!-- <li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 1 704 796 9107</span></a></li> -->
 				</ul>
 
 			</div>
