--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 					<span></span>
 				</a>
 				<ul class="site-menu float-end d-none d-md-block">
-					<li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 1 704 796 9107</span></a></li>
+					<!-- <li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 1 704 796 9107</span></a></li> -->
 				</ul>
 
 			</div>
 		</div>
 	</nav>
 
-	<div class="hero-2 overlay" style="background-image: url('images/img_12.jpg');">
+	<div class="hero-2 overlay" style="background-image: url('images/img_30.jpg');">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-5 mx-auto">
