quick text change for project 3 description

--- a/project-3.html
+++ b/project-3.html
@@ -107,7 +107,7 @@
 				</div>
 				<div class="col-lg-5">
 					<div class="heading">Description</div>
-					<p>This is a web app that allows you to search your favorite anime shows and add them to a watchlist </p>
+					<p>This is a web app using React.js, that allows you to search your favorite anime shows and add them to a watchlist </p>
 					<p>This app uses an API that retreives a HUGE list of old and new anime for you to find the title , and be given a summary of the show.</p>
 					<p>Haven't seen a show before ? Click on one and view the trailer to see if you want to watch it and add to your watch list.</p>
 					<p><a href="https://your-anime-watch-list.netlify.app/" class="btn btn-primary">Visit Website</a></p>
