made some small text fixes

--- a/project-2.html
+++ b/project-2.html
@@ -107,7 +107,7 @@
 				</div>
 				<div class="col-lg-5">
 					<div class="heading">Description</div>
-					<p>This is a web app is a professionally made landing page design example as if it was made for adidas utilizing both HTML and CSS </p>
+					<p>This web app is a professionally made landing page design example as if it was made for adidas utilizing both HTML and CSS </p>
 					<p>The image above is a revised version to showcase a difference in style</p>
 					<!-- <p>Pick the right fighting moves and beat your opponent! First to win 2 rounds wins the whole set! Good Luck!</p> -->
 					<p><a href="https://codepen.io/SavageSaiyan/pen/YzLMdpe" class="btn btn-primary">Visit Website</a></p>
