--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
 		<div class="container">
 			<div class="row mb-5 justify-content-center text-center">
 				<div class="col-lg-5">
-					<h2 class="heading">Get in touch</h2>
-					<p class="text-black-50">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<h2 class="heading">Want to hire me?</h2>
+					<p class="text-black-50">Im open and availble for Software Developer Roles. Click below to send me an email. I look forward to hearing from you.</p>
 				</div>
 			</div>
 			<!-- <form class="row"> -->
