--- a/project-3.html
+++ b/project-3.html
@@ -146,37 +146,71 @@
 			<div class="row g-4">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 					<div class="single-portfolio">
-						<a href="project-single.html">
-							<img src="images/img_18.jpg" alt="Image" class="img-fluid project-img-size">
-							<div class="contents">
-								<h3>Project One</h3>
-								<div class="cat">RPS Game</div>
-							</div>
-						</a>
+					  <a href="project-2.html">
+						<img
+						  src="images/img_20.jpg"
+						  alt="Image"
+						  class="img-fluid project-img-size"
+						/>
+						<div class="contents">
+						  <h3>Project Two - Landing Page Design</h3>
+						  <div class="cat">Landing Page Design</div>
+						</div>
+					  </a>
 					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+				  </div>
+		
+				  <!-- PROJECT 2 -->
+		
+				  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 					<div class="single-portfolio">
-						<a href="project-2.html">
-							<img src="images/img_20.jpg" alt="Image" class="img-fluid project-img-size">
-							<div class="contents">
-								<h3>Project Two</h3>
-								<div class="cat">Landing Page Design</div>
-							</div>
-						</a>
+					  <a href="project-4.html">
+						<img
+						  src="images/img_31.jpg"
+						  alt="Image"
+						  class="img-fluid project-img-size"
+						/>
+						<div class="contents">
+						  <h3>Project Four</h3>
+						  <div class="cat">Calendar App</div>
+						</div>
+					  </a>
 					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+				  </div>
+		
+				  <!-- PORJECT 3 -->
+		
+				  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 					<div class="single-portfolio">
-						<a href="project-3.html">
-							<img src="images/img_21.jpg" alt="Image" class="img-fluid project-img-size">
-							<div class="contents">
-								<h3>Project Three</h3>
-								<div class="cat">Anime Watch List</div>
-							</div>
-						</a>
+					  <a href="project-single.html">
+						<img
+						  src="images/img_18.jpg"
+						  alt="Image"
+						  class="img-fluid project-img-size"
+						/>
+						<div class="contents">
+						  <h3>Project One</h3>
+						  <div class="cat">RPS Game</div>
+						</div>
+					  </a>
 					</div>
-				</div>
+				  </div>
+		
+				  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+					<div class="single-portfolio">
+					  <a href="project-3.html">
+						<img
+						  src="images/img_21.jpg"
+						  alt="Image"
+						  class="img-fluid project-img-size"
+						/>
+						<div class="contents">
+						  <h3>Project Three</h3>
+						  <div class="cat">Anime Watch List</div>
+						</div>
+					  </a>
+					</div>
+				  </div>
 
 				<!-- ANOTHER 3 ROWS FOR PROJECTS
 					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
