--- a/project-4.html
+++ b/project-4.html
@@ -143,10 +143,10 @@
 					<span class="text-black-50 d-block">Client:</span> XYZ Inc.
 				</div> -->
           <div class="col-sm-3 border-left">
-            <span class="text-black-50 d-block">Started:</span> 7 Aug 2023
+            <span class="text-black-50 d-block">Started:</span> 26 Jan 2024
           </div>
           <div class="col-sm-3 border-left">
-            <span class="text-black-50 d-block">Finished:</span> 14 Aug 2023
+            <span class="text-black-50 d-block">Finished:</span> TBA
           </div>
         </div>
       </div>
@@ -166,6 +166,42 @@
         <div class="row g-4">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <div class="single-portfolio">
+              <a href="project-2.html">
+                <img
+                  src="images/img_20.jpg"
+                  alt="Image"
+                  class="img-fluid project-img-size"
+                />
+                <div class="contents">
+                  <h3>Project Two - Landing Page Design</h3>
+                  <div class="cat">Landing Page Design</div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- PROJECT 2 -->
+
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="single-portfolio">
+              <a href="project-4.html">
+                <img
+                  src="images/img_31.jpg"
+                  alt="Image"
+                  class="img-fluid project-img-size"
+                />
+                <div class="contents">
+                  <h3>Project Four</h3>
+                  <div class="cat">Calendar App</div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- PORJECT 3 -->
+
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="single-portfolio">
               <a href="project-single.html">
                 <img
                   src="images/img_18.jpg"
@@ -179,21 +215,7 @@
               </a>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="single-portfolio">
-              <a href="project-2.html">
-                <img
-                  src="images/img_20.jpg"
-                  alt="Image"
-                  class="img-fluid project-img-size"
-                />
-                <div class="contents">
-                  <h3>Project Two</h3>
-                  <div class="cat">Landing Page Design</div>
-                </div>
-              </a>
-            </div>
-          </div>
+
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <div class="single-portfolio">
               <a href="project-3.html">
