--- a/project-3.html
+++ b/project-3.html
@@ -4,53 +4,58 @@
 * Tempalte URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	
-	<link rel="shortcut icon" href="favicon.png">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<meta name="description" content="" />
-	<meta name="keywords" content="bootstrap, bootstrap5" />
-	
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.png" />
 
-	<link rel="stylesheet" href="fonts/icomoon/style.css">
-	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-	<link rel="stylesheet" href="css/tiny-slider.css">
-	<link rel="stylesheet" href="css/aos.css">
-	<link rel="stylesheet" href="css/glightbox.min.css">
-	<link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="" />
+    <meta name="keywords" content="bootstrap, bootstrap5" />
 
-	<title>Sterling's Portfolio &mdash;</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
-	<div class="site-mobile-menu site-navbar-target">
-		<div class="site-mobile-menu-header">
-			<div class="site-mobile-menu-close">
-				<span class="icofont-close js-menu-toggle"></span>
-			</div>
-		</div>
-		<div class="site-mobile-menu-body"></div>
-	</div>
+    <link rel="stylesheet" href="fonts/icomoon/style.css" />
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
+    <link rel="stylesheet" href="css/tiny-slider.css" />
+    <link rel="stylesheet" href="css/aos.css" />
+    <link rel="stylesheet" href="css/glightbox.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-	<nav class="site-nav">
-		<div class="container">
-			<div class="site-navigation">
-				<a href="index.html" class="logo m-0 float-start">Sterling's Portfolio<span class="text-primary">.</span> </a>
+    <title>Sterling's Portfolio &mdash;</title>
+  </head>
+  <body>
+    <div class="site-mobile-menu site-navbar-target">
+      <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close">
+          <span class="icofont-close js-menu-toggle"></span>
+        </div>
+      </div>
+      <div class="site-mobile-menu-body"></div>
+    </div>
 
-				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
-					<li><a href="index.html">Home</a></li>
-					<!-- <li class="has-children active"> -->
-						<li class="">
-						<a href="projects.html">Projects</a>
-						<!-- <ul class="dropdown">
+    <nav class="site-nav">
+      <div class="container">
+        <div class="site-navigation">
+          <a href="index.html" class="logo m-0 float-start"
+            >Sterling's Portfolio<span class="text-primary">.</span>
+          </a>
+
+          <ul
+            class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start"
+          >
+            <li><a href="index.html">Home</a></li>
+            <!-- <li class="has-children active"> -->
+            <li class="">
+              <a href="projects.html">Projects</a>
+              <!-- <ul class="dropdown">
 							<li><a href="#">Commercial Building</a></li>
 							<li><a href="#">Cultural Lifestyle</a></li>
 							<li class="has-children">
@@ -62,157 +67,175 @@
 								</ul>
 							</li>
 						</ul> -->
-					</li>
-					<!-- <li><a href="services.html">Services</a></li> -->
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact Me</a></li>
-				</ul>
+            </li>
+            <!-- <li><a href="services.html">Services</a></li> -->
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+          </ul>
 
-				<a href="#" class="burger ml-auto float-end site-menu-toggle light js-menu-toggle d-inline-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
-					<span></span>
-				</a>
-				<ul class="site-menu float-end d-none d-md-block">
-					<!-- <li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 2 292 4392 327</span></a></li> -->
-				</ul>
+          <a
+            href="#"
+            class="burger ml-auto float-end site-menu-toggle light js-menu-toggle d-inline-block d-lg-none"
+            data-toggle="collapse"
+            data-target="#main-navbar"
+          >
+            <span></span>
+          </a>
+          <ul class="site-menu float-end d-none d-md-block">
+            <!-- <li><a href="#" class="d-flex align-items-center text-white h2 fw-bold"><span class="icon-phone me-2"></span> <span>+ 2 292 4392 327</span></a></li> -->
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-			</div>
-		</div>
-	</nav>
+    <div
+      class="hero-2 overlay"
+      style="background-image: url('images/img_24.jpg')"
+    >
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-5 mx-auto">
+            <h1 class="mb-5 text-center">
+              <span>Anime TV Show Watch List app</span>
+            </h1>
 
-
-
-	<div class="hero-2 overlay" style="background-image: url('images/img_24.jpg');">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-lg-5 mx-auto ">
-					<h1 class="mb-5 text-center"><span>Anime TV Show Watch List app</span></h1>
-
-
-					<!-- <div class="intro-desc text-left">
+            <!-- <div class="intro-desc text-left">
 						<div class="line"></div>
 						<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
 					</div> -->
-				</div>
-			</div>
-		</div>
-	</div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-	<div class="section sec-3">
-		<div class="container">
-
-			<div class="row mb-5 justify-content-between">
-				<div class="col-lg-6 mb-lg-0 mb-4">
-					<img src="images/img_21.jpg" alt="Image" class="img-fluid">
-				</div>
-				<div class="col-lg-5">
-					<div class="heading">Description</div>
-					<p>This is a web app using React.js, that allows you to search your favorite anime shows and add them to a watchlist </p>
-					<p>This app uses an API that retreives a HUGE list of old and new anime for you to find the title , and be given a summary of the show.</p>
-					<p>Haven't seen a show before ? Click on one and view the trailer to see if you want to watch it and add to your watch list.</p>
-					<p><a href="https://your-anime-watch-list.netlify.app/" class="btn btn-primary">Visit Website</a></p>
-					
-				</div>
-			</div>
-			<div class="row">
-				<!-- <div class="col-sm-3 border-left">
+    <div class="section sec-3">
+      <div class="container">
+        <div class="row mb-5 justify-content-between">
+          <div class="col-lg-6 mb-lg-0 mb-4">
+            <img src="images/img_21.jpg" alt="Image" class="img-fluid" />
+          </div>
+          <div class="col-lg-5">
+            <div class="heading">Description</div>
+            <p>
+              This is a web app using React.js, that allows you to search your
+              favorite anime shows and add them to a watchlist
+            </p>
+            <p>
+              This app uses an API that retreives a HUGE list of old and new
+              anime for you to find the title , and be given a summary of the
+              show.
+            </p>
+            <p>
+              Haven't seen a show before ? Click on one and view the trailer to
+              see if you want to watch it and add to your watch list.
+            </p>
+            <p>
+              <a
+                href="https://your-anime-watch-list.netlify.app/"
+                class="btn btn-primary"
+                >Visit Website</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <!-- <div class="col-sm-3 border-left">
 					<span class="text-black-50 d-block">Work year:</span>  2020
 				</div>
 				<div class="col-sm-3 border-left">
 					<span class="text-black-50 d-block">Client:</span> XYZ Inc.
 				</div> -->
-				<div class="col-sm-3 border-left">
-					<span class="text-black-50 d-block">Started:</span> 7 Aug 2023
-				</div>
-				<div class="col-sm-3 border-left">
-					<span class="text-black-50 d-block">Finished:</span> 14 Aug 2023
-				</div>
-			</div>
-		</div>
-	</div>
+          <div class="col-sm-3 border-left">
+            <span class="text-black-50 d-block">Started:</span> 7 Aug 2023
+          </div>
+          <div class="col-sm-3 border-left">
+            <span class="text-black-50 d-block">Finished:</span> 14 Aug 2023
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="section sec-5">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-lg-6">
+            <h2 class="heading">Related Projects</h2>
+          </div>
+          <div class="col-lg-6 ms-auto">
+            <p>Check out my related projects that I've done so far</p>
+          </div>
+        </div>
 
-	<div class="section sec-5">
-		<div class="container">
-			<div class="row mb-5">
-				<div class="col-lg-6">
-					<h2 class="heading">Related Projects</h2>
-				</div>
-				<div class="col-lg-6 ms-auto">
-					<p>Check out my related projects that I've done so far</p>
-				</div>
-			</div>
+        <div class="row g-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="single-portfolio">
+              <a href="project-2.html">
+                <img
+                  src="images/img_20.jpg"
+                  alt="Image"
+                  class="img-fluid project-img-size"
+                />
+                <div class="contents">
+                  <h3>Project Two - Landing Page Design</h3>
+                  <div class="cat">Landing Page Design</div>
+                </div>
+              </a>
+            </div>
+          </div>
 
-			<div class="row g-4">
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-					<div class="single-portfolio">
-					  <a href="project-2.html">
-						<img
-						  src="images/img_20.jpg"
-						  alt="Image"
-						  class="img-fluid project-img-size"
-						/>
-						<div class="contents">
-						  <h3>Project Two - Landing Page Design</h3>
-						  <div class="cat">Landing Page Design</div>
-						</div>
-					  </a>
-					</div>
-				  </div>
-		
-				  <!-- PROJECT 2 -->
-		
-				  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-					<div class="single-portfolio">
-					  <a href="project-4.html">
-						<img
-						  src="images/img_31.jpg"
-						  alt="Image"
-						  class="img-fluid project-img-size"
-						/>
-						<div class="contents">
-						  <h3>Project Four</h3>
-						  <div class="cat">Calendar App</div>
-						</div>
-					  </a>
-					</div>
-				  </div>
-		
-				  <!-- PORJECT 3 -->
-		
-				  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-					<div class="single-portfolio">
-					  <a href="project-single.html">
-						<img
-						  src="images/img_18.jpg"
-						  alt="Image"
-						  class="img-fluid project-img-size"
-						/>
-						<div class="contents">
-						  <h3>Project One</h3>
-						  <div class="cat">RPS Game</div>
-						</div>
-					  </a>
-					</div>
-				  </div>
-		
-				  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-					<div class="single-portfolio">
-					  <a href="project-3.html">
-						<img
-						  src="images/img_21.jpg"
-						  alt="Image"
-						  class="img-fluid project-img-size"
-						/>
-						<div class="contents">
-						  <h3>Project Three</h3>
-						  <div class="cat">Anime Watch List</div>
-						</div>
-					  </a>
-					</div>
-				  </div>
+          <!-- PROJECT 2 -->
 
-				<!-- ANOTHER 3 ROWS FOR PROJECTS
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="single-portfolio">
+              <a href="project-4.html">
+                <img
+                  src="images/img_31.jpg"
+                  alt="Image"
+                  class="img-fluid project-img-size"
+                />
+                <div class="contents">
+                  <h3>Project Four</h3>
+                  <div class="cat">Calendar App</div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- PORJECT 3 -->
+
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="single-portfolio">
+              <a href="project-single.html">
+                <img
+                  src="images/img_18.jpg"
+                  alt="Image"
+                  class="img-fluid project-img-size"
+                />
+                <div class="contents">
+                  <h3>Project One</h3>
+                  <div class="cat">RPS Game</div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="single-portfolio">
+              <a href="project-3.html">
+                <img
+                  src="images/img_21.jpg"
+                  alt="Image"
+                  class="img-fluid project-img-size"
+                />
+                <div class="contents">
+                  <h3>Project Three</h3>
+                  <div class="cat">Anime Watch List</div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- ANOTHER 3 ROWS FOR PROJECTS
 					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 					<div class="single-portfolio">
 						<a href="project-single.html">
@@ -246,16 +269,12 @@
 						</a>
 					</div>
 				</div> -->
+        </div>
+      </div>
+    </div>
 
-				
-			</div>
-		</div>
-	</div>
-
-
-	<div class="sec-4 section bg-light">
-
-		<!-- <div class="text-center mb-5">
+    <div class="sec-4 section bg-light">
+      <!-- <div class="text-center mb-5">
 			<h2 class="heading mb-5 text-center">Testimonial</h2>
 		</div>
 		<div class="testimonial-slide-center-wrap" data-aos="fade-up" data-aos-delay="100">
@@ -407,34 +426,42 @@
 			</div>
 
 		</div> -->
-	</div>
+    </div>
 
-
-	
-
-	<div class="site-footer bg-light">
-		<div class="container">
-
-			<div class="row justify-content-between">
-				<div class="col-lg-4">
-					<div class="widget">
-						<h3 class="line-top">Socials</h3>
-						<p class="mb-5">Feel free to connect with my socials below and check out my linkedIn page where you can find my general professional history, and my github where you can see some of the latest projects I may be working on! </p>
-
-					</div>
-					<div class="widget">
-						<h3 class="line-top">Connect with me</h3>
-						<ul class="social list-unstyled mb-5">
-							<!-- <li><a href="#"><span class="icon-facebook"></span></a></li>
+    <div class="site-footer bg-light">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-4">
+            <div class="widget">
+              <h3 class="line-top">Socials</h3>
+              <p class="mb-5">
+                Feel free to connect with my socials below and check out my
+                linkedIn page where you can find my general professional
+                history, and my github where you can see some of the latest
+                projects I may be working on!
+              </p>
+            </div>
+            <div class="widget">
+              <h3 class="line-top">Connect with me</h3>
+              <ul class="social list-unstyled mb-5">
+                <!-- <li><a href="#"><span class="icon-facebook"></span></a></li>
 							<li><a href="#"><span class="icon-twitter"></span></a></li>
 							<li><a href="#"><span class="icon-instagram"></span></a></li>
 							<li><a href="#"><span class="icon-dribbble"></span></a></li> -->
-							<li><a href="https://www.linkedin.com/in/sterlingduncan9/"><span class="icon-linkedin"></span></a></li>
-							<li><a href="https://github.com/SavageSaiyan"><span class="icon-github"></span></a></li>
-						</ul>
-					</div>
-				</div>
-				<!-- <div class="col-lg-6">
+                <li>
+                  <a href="https://www.linkedin.com/in/sterlingduncan9/"
+                    ><span class="icon-linkedin"></span
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://github.com/SavageSaiyan"
+                    ><span class="icon-github"></span
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- <div class="col-lg-6">
 					<div class="row">
 						<div class="col-12">
 							<div class="widget">
@@ -476,35 +503,36 @@
 						</div>
 					</div>
 				</div> -->
-			</div>
+        </div>
 
-			<div class="row justify-content-center text-center copyright">
-				<div class="col-md-8">
-					<p class="small text-black-50">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved.
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
+        <div class="row justify-content-center text-center copyright">
+          <div class="col-md-8">
+            <p class="small text-black-50">
+              Copyright &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              . All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- Preloader -->
+    <div id="overlayer"></div>
+    <div class="loader">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
 
-	
-
-
-	<!-- Preloader -->
-	<div id="overlayer"></div>
-	<div class="loader">
-		<div class="spinner-border" role="status">
-			<span class="visually-hidden">Loading...</span>
-		</div>
-	</div>
-
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/tiny-slider.js"></script>
-	<script src="js/aos.js"></script>
-	<script src="js/glightbox.min.js"></script>
-	<script src="js/navbar.js"></script>
-	<script src="js/counter.js"></script>
-	<script src="js/custom.js"></script>
-</body>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/tiny-slider.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/glightbox.min.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/counter.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
 </html>
